# r2sql

./: CMakeLists.txt
.github/scripts/: stage_artifacts.sh
.github/workflows/: build.yml
cmake/: FindRadare2.cmake
examples/: CMakeLists.txt
src/lib/: CMakeLists.txt
